<?xml version="1.0"?>
<package format="3">
  <name>sync_pkg</name>
  <version>0.0.1</version>
  <description>Synchronize lidar and 6 cameras</description>
  <maintainer email="you@example.com">zjh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

